k8s/cloud/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod

---

apiVersion: v1
kind: Namespace
metadata:
  name: dev
