k8s/cloud/deploy_ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-blue
  template:
    metadata:
      labels:
        app: web-blue
    spec:
      containers:
        - name: web-blue
          image: fabricioveronez/web-color:blue
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"

---

apiVersion: v1
kind: Service
metadata:
  name: web-blue
spec:
  selector:
    app: web-blue
  ports:
    - port: 80
      targetPort: 80


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-green
  template:
    metadata:
      labels:
        app: web-green
    spec:
      containers:
        - name: web-green
          image: fabricioveronez/web-color:green
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: web-green
spec:
  selector:
    app: web-green
  ports:
    - port: 80
      targetPort: 80

# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: nginx
# spec:
#   replicas: 2
#   selector:
#     matchLabels:
#       app: nginx
#   template:
#     metadata:
#       labels:
#         app: nginx
#     spec:
#       containers:
#         - name: nginx
#           image: nginx
#           ports:
#             - containerPort: 80
#           resources:
#             requests:
#               memory: "64Mi"
#               cpu: "100m"
#             limits:
#               memory: "128Mi"
#               cpu: "200m"
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: nginx
# spec:
#   selector:
#     app: nginx
#   ports:
#     - port: 80
#       targetPort: 80
